# faast_foundations

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
life_expectancy/: cleaning.py  context.py  load_module.py  load_save_module.py  main.py  notebook.ipynb  region.py  save_module.py  strategy.py  strategy_clean.py  strategy_filter.py  strategy_load.py  strategy_save.py
life_expectancy/tests/: conftest.py  test_cleaning.py
life_expectancy/tests/fixtures/: countries_list.json
