[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Luis Santos"}
]
dependencies = ["pandas"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[project.scripts]
life_expectancy = "life_expectancy.cleaning:main"

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 8

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   # Add any other checks you want to disable here
]

